fix header on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,22 +4,21 @@
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-areas:
-    "logo header"
+    "logo-link header"
+    "sub-title sub-title"
     "nav nav";
+}
+.logo-link {
+  grid-area: logo-link;
 }
 .logo {
   grid-area: logo;
-  width: 5rem;
+  width: 8rem;
 }
 
 .header-section {
   grid-area: header;
   align-self: center;
-  display: grid;
-  grid-template-rows: 3fr 1fr;
-  grid-template-areas:
-    "title"
-    "sub-title";
 }
 
 .header-section {
@@ -27,12 +26,13 @@
 }
 .title {
   font-weight: bold;
-  font-size: 1.7rem;
+  font-size: 2rem;
 }
 
 .sub-title {
   grid-area: sub-title;
-  font-size: 0.6rem;
+  font-size: 1rem;
+  padding-left: 0.5rem;
 }
 
 .nav {
@@ -42,8 +42,11 @@
 
 .nav ul {
   list-style: none;
-  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  padding: 0.5rem 0;
   margin: 0;
+  justify-items: center;
 }
 
 /**FOOTER STYLES **/
@@ -93,14 +96,11 @@
   padding: 0 1rem;
 }
 
-@media screen and (min-width: 37.5rem) {
+@media screen and (min-width: 47.5rem) {
   /**HEADER STYLES **/
   .header {
     grid-template-columns: 1fr 7fr;
-    grid-template-areas: "logo header";
-  }
-  .logo {
-    width: 7rem;
+    grid-template-areas: "logo-link header";
   }
   .header-section {
     width: 98%;
@@ -113,6 +113,9 @@
       "sub-title nav";
   }
 
+  .sub-title {
+    justify-self: start;
+  }
   .title {
     grid-area: title;
     font-size: 3rem;
@@ -125,8 +128,7 @@
   }
 
   .nav ul {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
+    padding: 0;
     gap: 4em;
   }
 
@@ -165,13 +167,6 @@
   /**MAIN STYLES**/
   .main {
     padding: 2rem;
-  }
-}
-
-@media screen and (min-width: 45rem) {
-  /**HEADER STYLES **/
-  .sub-title {
-    font-size: 1rem;
   }
 }
 
