--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -4,8 +4,7 @@
 }
 .nav-mobile ul {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  padding-left: 0.5rem;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav-mobile ul li {
